# gcal-transcribe

./: .gitignore  README.md  pyproject.toml
gcal_transcribe/: main.py
