[tool.poetry]
name = "gcal-transcribe"
version = "0.1.0"
description = ""
authors = ["Hunter Schafer <hschafer@uw.edu>"]
readme = "README.md"
packages = [{include = "gcal_transcribe"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
